build out home page

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "font-awesome": "^4.7.0",
     "ginger-grid": "^2.1.1",
     "nifty-nav": "^3.0.0",
-    "prelude-wp": "^4.0.3"
+    "prelude-wp": "^4.0.3",
+    "slick-carousel": "^1.8.1"
   }
 }
