--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Dana Malkin",
   "license": "GPL-3.0",
   "dependencies": {
+    "aos": "^2.2.0",
     "font-awesome": "^4.7.0",
     "ginger-grid": "^2.1.1",
     "nifty-nav": "^3.0.0",
