--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aos": "^2.2.0",
     "font-awesome": "^4.7.0",
     "ginger-grid": "^2.1.1",
+    "jquery-parallax.js": "^1.5.0",
     "nifty-nav": "^3.0.0",
     "prelude-wp": "^4.0.3",
     "slick-carousel": "^1.8.1",
